BugFix--Some Images are not showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,7 +266,7 @@ header {
 }
 
 .your-painting {
-  background-image: url("../images/your-painting.png");
+  background-image: url("../images/YourPaintingBG.png");
   background-position: center bottom;
   width: 100%;
   height: auto;
